// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adjustSelectionOffsetsAndCleanup delete all characters 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "",
  "meta": Immutable.Map {
    "selections": Immutable.List [],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete all highlighted characters from caret through the end (when "start" with multiple nodes in handleBackspace) 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second para",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": true,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 3,
        "end": 6,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 6,
        "end": 12,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 12,
        "end": 13,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 13,
        "end": 17,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete all highlighted characters up to caret (up to edge of a selection) 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "paragraph for good measure?",
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Map {
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-strikethrough": false,
            "selection-siteinfo": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 4,
          "selection-bold": true,
          "selection-italic": true,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 5,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 9,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": true,
      "selection-siteinfo": false,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
  "id": "ce7b",
  "post_id": 166,
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete all highlighted characters up to caret (when "end" in handleBackspace) 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "graph because",
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": undefined,
        "length": -1,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 5,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": true,
      "selection-siteinfo": false,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete highlighted characters from middle of one selection 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a sed paragraph because",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": true,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 3,
        "end": 6,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 6,
        "end": 9,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 9,
        "end": 10,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 10,
        "end": 19,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 19,
        "end": 27,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete highlighted characters from middle, deletes a selection, adjusts overlapping selections 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And graph because",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": true,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 3,
        "end": 4,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 4,
        "end": 9,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 9,
        "end": 17,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete last character (caret collapsed) of last selection with formats, model should have 'selections' unset 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second aragraph because",
  "meta": Immutable.Map {},
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete one character (caret collapsed) at the boundary of two selections 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a secon paragraph because",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": true,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 3,
        "end": 6,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 6,
        "end": 11,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 11,
        "end": 12,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 12,
        "end": 21,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 21,
        "end": 29,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`adjustSelectionOffsetsAndCleanup noop - default arguments 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second paragraph because",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": true,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 3,
        "end": 6,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 6,
        "end": 12,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 12,
        "end": 13,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 13,
        "end": 22,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 22,
        "end": 30,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`adjustSelectionOffsetsAndCleanup paste a word with collapsed caret (similar to adding one character on keypress) 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And apple second paragraph because",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": true,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 3,
        "end": 10,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 10,
        "end": 16,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 16,
        "end": 17,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 17,
        "end": 26,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 26,
        "end": 34,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`concatSelections left last selection has same formats as right first selection (merge) 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 6,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 6,
        "end": 12,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 12,
        "end": 13,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 13,
        "end": 22,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 22,
        "end": 36,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 36,
        "end": 42,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 42,
        "end": 43,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 43,
        "end": 52,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 52,
        "end": 60,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`getSelection applies formats of outer selection if selection is made within one selection 1`] = `
Immutable.Record {
  "start": 16,
  "end": 20,
  "selection-bold": false,
  "selection-italic": false,
  "selection-code": true,
  "selection-siteinfo": false,
  "selection-mini": false,
  "selection-strikethrough": false,
  "selection-link": false,
  "linkUrl": "",
}
`;

exports[`getSelection creates new selection on paragraph with no selections 1`] = `
Immutable.Record {
  "start": 10,
  "end": 15,
  "selection-bold": false,
  "selection-italic": false,
  "selection-code": false,
  "selection-siteinfo": false,
  "selection-mini": false,
  "selection-strikethrough": false,
  "selection-link": false,
  "linkUrl": "",
}
`;

exports[`getSelection creates new selection with intersection of overlapping Selection formats applied (no formats) 1`] = `
Immutable.Record {
  "start": 2,
  "end": 22,
  "selection-bold": false,
  "selection-italic": false,
  "selection-code": false,
  "selection-siteinfo": false,
  "selection-mini": false,
  "selection-strikethrough": false,
  "selection-link": false,
  "linkUrl": "",
}
`;

exports[`getSelection creates new selection with intersection of overlapping Selection formats applied 1`] = `
Immutable.Record {
  "start": 10,
  "end": 20,
  "selection-bold": false,
  "selection-italic": false,
  "selection-code": true,
  "selection-siteinfo": false,
  "selection-mini": false,
  "selection-strikethrough": false,
  "selection-link": false,
  "linkUrl": "",
}
`;

exports[`getSelection finds existing Selection, preserves existing formats 1`] = `
Immutable.Record {
  "start": 13,
  "end": 22,
  "selection-bold": false,
  "selection-italic": false,
  "selection-code": true,
  "selection-siteinfo": false,
  "selection-mini": false,
  "selection-strikethrough": false,
  "selection-link": true,
  "linkUrl": "http://foo.bar",
}
`;

exports[`selectionReviver return Selection when JS object has 'next' and 'length' keys 1`] = `
Immutable.Record {
  "next": null,
  "length": -1,
  "selection-bold": false,
  "selection-italic": false,
  "selection-code": false,
  "selection-siteinfo": false,
  "selection-mini": false,
  "selection-strikethrough": false,
  "selection-link": false,
  "linkUrl": "",
}
`;

exports[`splitSelectionsAtCaretOffset split in middle of selection 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": true,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 3,
        "end": 6,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 6,
        "end": 12,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 12,
        "end": 13,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 13,
        "end": 17,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`splitSelectionsAtCaretOffset split in middle of selection 2`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 5,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 5,
        "end": 13,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`splitSelectionsAtCaretOffset split with selections on left and none on right 1`] = `
Immutable.Map {
  "post_id": 166,
  "id": "21ba",
  "parent_id": "39fb",
  "position": 0,
  "type": "p",
  "content": "Here's a first para",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 9,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 9,
        "end": 11,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 11,
        "end": 19,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
}
`;

exports[`splitSelectionsAtCaretOffset split with selections on left and none on right 2`] = `
Immutable.Map {
  "post_id": 166,
  "id": "21bc",
  "parent_id": "39fb",
  "position": 1,
  "type": "p",
  "content": "graph because",
  "meta": Immutable.Map {},
}
`;

exports[`upsertSelection insert first Selection 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second paragraph because",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 6,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 6,
        "end": 12,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 12,
        "end": 30,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`upsertSelection new Selection matches existing Selection 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second paragraph because",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": true,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 3,
        "end": 6,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 6,
        "end": 12,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 12,
        "end": 13,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 13,
        "end": 22,
        "selection-bold": true,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 22,
        "end": 30,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;

exports[`upsertSelection new Selection overlaps existing Selections 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second paragraph because",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": true,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 3,
        "end": 6,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 6,
        "end": 10,
        "selection-bold": false,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 10,
        "end": 20,
        "selection-bold": true,
        "selection-italic": true,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": true,
        "linkUrl": "http://hot.flakes",
      },
      Immutable.Record {
        "start": 20,
        "end": 22,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 22,
        "end": 30,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
  "id": "6eda",
  "post_id": 166,
}
`;
